export enum LikeType {
  Up,
  Down,
}
