import Page from "./Page";

export default class PrivatePage extends Page {
}
