export enum UserStatus {
  Active,
  Blocked
}
